[package]
name = "ansi-style"
version = "1.0.0"
edition = "2021"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
description = "ANSI escape codes for styling strings in the terminal"
license = "MIT"
readme = "README.md"
repository = "https://github.com/a-isaiahharvey/ansi-style"
keywords = ["ansi", "terminal"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
